homepage_json_link

--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
   "bugs": {
     "url": "https://github.com/mbekesithole/mbeke-data-finance/issues"
   },
-  "homepage": "https://mbekesithole.github.io/mysamplewebsite"
+  "homepage": "https://mbekesithole.github.io/mbeke-data-finance"
 }
